# practical-deep-learning

./: README.md  pyproject.toml
01_getting-started-image-classifier/: creating_an_image_classifier.ipynb  lecture_and_book_notes.ipynb
getting-started-image-classifier/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb  lecture_and_book_notes.ipynb
